style.css
/* ... */
*,
*:before,
*:after {
  box-sizing: inherit;
}

/* Use variable for to easily change your theme's colour scheme and typography.

██    ██  █████  ██████  ██  █████  ██████  ██      ███████ ███████ 
██    ██ ██   ██ ██   ██ ██ ██   ██ ██   ██ ██      ██      ██      
██    ██ ███████ ██████  ██ ███████ ██████  ██      █████   ███████ 
 ██  ██  ██   ██ ██   ██ ██ ██   ██ ██   ██ ██      ██           ██ 
  ████   ██   ██ ██   ██ ██ ██   ██ ██████  ███████ ███████ ███████ 
                                                                    
*/

:root {
  --primary-text-color: #222;
  --accent-color: rgb(255, 255, 255);
  --hyperlink-color: rgb(153, 153, 153);
  --hyperlink-alternate-color: #00bbff;
  --hover-color: rgb(255, 255, 255);
  --body-typeface: "Inter", sans-serif;
  --heading-typeface: "Montserrat", sans-serif;
  --off-white: #f8f8ff;
  --isabelline: #f4f0ec;
  --baby-powder: #ddf5ff;
  --alice-blue: #f0f8ff;
  --alabaster: #f2f0e6;
  --floral-white: #fffaf0;
  --background-color: #f5f5f5;
  --alt-background-color: black;
  --text-selection-background-color: #555;
  --base-color: 0;
  --color-lightest: hsla(var(--base-color), 1%, 85%, 100%);
  --color-light: hsla(var(--base-color), 1%, 75%, 100%);
  --color-normal: hsla(var(--base-color), 1%, 50%, 100%);
  --color-dark: hsla(var(--base-color), 1%, 35%, 100%);
  --color-darkest: hsla(var(--base-color), 1%, 15%, 100%);
}

body {
  font-family: var(--body-typeface);
  color: var(--primary-text-color);
  background: black;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

/* Making all images responsive */
img {
  max-width: 100%;
  height: auto;
  vertical-align: top;
  /* Removes the gap/space in inline elements for text descenders. */
  object-fit: contain;
  /* This is optional. Also try cover or leave out entirely. */
}

iframe {
  max-width: 100%;
  height: 75vh;
  vertical-align: top;
  /* Removes the gap/space in inline elements for text descenders. */
  object-fit: cover;
  /* This is optional. Also try cover or leave out entirely. */
}


/* Global & Mobile Typography 

████████ ██    ██ ██████   ██████   ██████  ██████   █████  ██████  ██   ██ ██    ██ 
   ██     ██  ██  ██   ██ ██    ██ ██       ██   ██ ██   ██ ██   ██ ██   ██  ██  ██  
   ██      ████   ██████  ██    ██ ██   ███ ██████  ███████ ██████  ███████   ████   
   ██       ██    ██      ██    ██ ██    ██ ██   ██ ██   ██ ██      ██   ██    ██    
   ██       ██    ██       ██████   ██████  ██   ██ ██   ██ ██      ██   ██    ██    
                                                                                     
*/

h1 {
  font-size: 2rem;
  font-family: var(--heading-typeface);
  margin-bottom: 1rem;
  color: #00bbff;
}

h2 {
  font-size: 2.25rem;
  font-weight: 300;
  font-family: var(--heading-typeface);
  margin-bottom: 1rem;
  color: #00bbff;
}

h3 {
  font-size: 1.325rem;
  margin-bottom: 1rem;
  line-height: 1.3;
  color: white;
  font-weight: 100;
}

h4 {
  font-size: 1.125rem;
  margin-bottom: 1rem;
  line-height: 1.3;
  color: white;
  font-weight: 100;
}

/* Hyperlink Styles */
a {
  text-decoration: none;
  color: var(--hyperlink-color);
}

a:hover {
  color: var(--hover-color);
  text-shadow: 0px 0px 5px #2784db;
}

a:active {
  color: var(--hover-color);
  /* Tap on mobile */
}

.navigation-arrow:link {
  -webkit-text-stroke-width: 4px;
  -webkit-text-stroke-color: #006b92;
  color: transparent;
}

.navigation-arrow:active,
.navigation-arrow:hover {
  color: #00bbff;
  -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: #00bbff;
}

.colored-link {
  color: var(--hyperlink-alternate-color);
}

.custom-navigation {
  font-size: 150%;
}

.custom-navigation:hover {
  background: url(heading-background.svg);
  background-size: 15%;
  background-repeat: no-repeat;
  background-position: center center;
}

p {
  line-height: 1.3;
  margin-bottom: 1rem;
}

/* Work Page Layout

██     ██  ██████  ██████  ██   ██     ██████   █████   ██████  ███████ 
██     ██ ██    ██ ██   ██ ██  ██      ██   ██ ██   ██ ██       ██      
██  █  ██ ██    ██ ██████  █████       ██████  ███████ ██   ███ █████   
██ ███ ██ ██    ██ ██   ██ ██  ██      ██      ██   ██ ██    ██ ██      
 ███ ███   ██████  ██   ██ ██   ██     ██      ██   ██  ██████  ███████ 

*/

.work-wrapper {
  flex: 1;
}

/* Padding around work grid and project page */
.portfolio,
.project-wrapper {
  padding: .25rem;
}

/* Defining the work page grid */
.grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: 0;
  /* Magical, media-query-less responsiveness is achieved using the repeat() function and the auto placement keywords. To achieve wrapping, we can use the auto-fit. If you're using auto-fit, the content will stretch to fill the entire row width.  Specify a minimum width for the columns, using the minmax() function. The 1fr is what tells the browser to distribute the space between the columns so that each column equally gets one fraction of that space.  */
}

/* Optional – Sizing the work page images */
/* figure {
  max-height: 250px;
  overflow: hidden;
  position: relative;
} */


/* Hero 

██   ██ ███████ ██████   ██████  
██   ██ ██      ██   ██ ██    ██ 
███████ █████   ██████  ██    ██ 
██   ██ ██      ██   ██ ██    ██ 
██   ██ ███████ ██   ██  ██████  
                                 
*/

.hero {
  min-height: 50vh;
  display: flex;
  flex-direction: column;
}

.branding-navigation {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 1rem;
  align-items: center;
}

.logo {
  width: 3rem;
}

.hero-headline-wrapper {
  display: flex;
  flex-direction: column;
  flex: 1;
  /* align-items: right; */
  padding: 1rem 1rem;
  width: 100%;
  /* text-align: right; */
}

.branding-section {
  width: 100%; 
  padding: 1rem;}

.hero-title-section {
  width: 100%; 
  display: flex; 
  align-items: center; 
  justify-content: center; 
  flex-direction: column;
}
/* ... */

